@@ -99,6 +99,7 @@ enum {
 int u_net_sock (const char *uri, int mode);
 int u_net_sock_by_addr (u_net_addr_t *addr, int mode);
 
+/* deprecated: use u_net_sock_by_addr instead */
 int u_net_sock_tcp (u_net_addr_t *addr, int mode) __LIBU_DEPRECATED;
 int u_net_sock_udp (u_net_addr_t *addr, int mode) __LIBU_DEPRECATED;
 int u_net_sock_unix (u_net_addr_t *addr, int mode) __LIBU_DEPRECATED;
@@ -106,11 +107,15 @@ int u_net_sock_unix (u_net_addr_t *addr, int mode) __LIBU_DEPRECATED;
 /* low-level socket creation */
 int u_net_tcp4_ssock (struct sockaddr_in *sad, int reuse, int backlog);
 int u_net_tcp4_csock (struct sockaddr_in *sad);
+int u_net_udp4_ssock (struct sockaddr_in *sad, int reuse);
+int u_net_udp4_csock (struct sockaddr_in *sad);
 int u_net_uri2sin (const char *uri, struct sockaddr_in *sad);
 
 #ifndef NO_IPV6
 int u_net_tcp6_ssock (struct sockaddr_in6 *sad, int reuse, int backlog);
 int u_net_tcp6_csock (struct sockaddr_in6 *sad);
+int u_net_udp6_ssock (struct sockaddr_in6 *sad, int reuse);
+int u_net_udp6_csock (struct sockaddr_in6 *sad);
 int u_net_uri2sin6 (const char *uri, struct sockaddr_in6 *sad);
 #endif /* !NO_IPV6 */
 
