@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.77 2009/12/23 15:48:35 tho Exp $
+$Id: ChangeLog,v 1.78 2009/12/23 17:02:21 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
@@ -11,7 +11,8 @@ LibU 1.5.0
 	- [net] module implementation revamped; u_net_sock_by_addr added; handle
 	  wildcard address (i.e. '*') in uri; IPv6 uri to address translator;
 	  u_net_uri2sin footprint aligned to other u_net_uri2* interfaces;
-	  u_accept prototype fixed for platforms supporting socklen_t type; ...
+	  u_accept prototype fixed for platforms supporting socklen_t type; 
+	  added support for IPv[46] UDP sockets
 	- fix configure bug which prevented IPv6 and UNIX sockets bits inclusion
 	- [pwd] use u_strtok instead of deprecated u_tokenize internally
 
